fix: sass page-content overflow: hidden;

--- a/app/pageMain.scss
+++ b/app/pageMain.scss
@@ -25,7 +25,7 @@ $base-max-margin: auto;
 
 .page-header {
     .page-content {
-        overflow: hidden;
+        // overflow: hidden;
 
         .page-container {
             // opacity: 0;
